tests/baselines/reference/ArrowFunction2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction2.ts (2 errors) ====
    var v = (a: b,) => {
                 ~
!!! error TS1009: Trailing comma not allowed.
                ~
!!! error TS2304: Cannot find name 'b'.
       
    };